[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xtorage"
version = "0.1.0"
description = "Local file-to-PNG chunk encoder for confirmed X Commerce rehost persistence tests"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "Pillow>=10",
]

[project.scripts]
xtorage = "xtorage.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["xtorage*"]

[tool.setuptools.package-data]
xtorage = ["assets/*.png"]
